feat(security): enhance endpoint authorization rules and CORS configuration
- Added role-based access control for users, projects, tasks, dashboard, and AI endpoints
- Configured CORS with allowed origins, methods, headers, and credentials
- Enabled method-level security and stateless session management
- Whitelisted Swagger and auth endpoints for public access